# QmlThemeDemo

./: .gitignore  CMakeLists.txt  README.md  Resource.qrc  main.cpp  main.qml  main.qml.autosave  xml_helper.cpp  xml_helper.h
Resources/Themes/: Light.qml  OneDark.qml  ThemeBase.qml  ThemeManager.qml  qmldir
Themes/: Dark.qml  Light.qml  OneDark.qml  qmldir
